--- a/app/index.html
+++ b/app/index.html
@@ -3,9 +3,11 @@
 
 <head>
   <title>Tax Flow Demo</title>
-  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous"></script>
+  
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
+
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
     crossorigin="anonymous">
@@ -34,22 +36,20 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="#">Tax Flow Demo</a>
+        <a class="navbar-brand" href="#">Tax Flow</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active">
+          <!-- <li class="active">
             <a href="#">Link
               <span class="sr-only">(current)</span>
             </a>
-          </li>
-          <li>
-            <a href="#">Link</a>
-          </li>
+          </li> -->
+
           <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Tax
               <span class="caret"></span>
             </a>
             <ul class="dropdown-menu">
@@ -62,13 +62,39 @@
               <li>
                 <a href="#">Something else here</a>
               </li>
-              <li role="separator" class="divider"></li>
+            </ul>
+          </li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Depts
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
               <li>
-                <a href="#">Separated link</a>
+                <a href="#">Action</a>
               </li>
-              <li role="separator" class="divider"></li>
               <li>
-                <a href="#">One more separated link</a>
+                <a href="#">Another action</a>
+              </li>
+              <li>
+                <a href="#">Something else here</a>
+              </li>
+            </ul>
+          </li>
+
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Invoices
+              <span class="caret"></span>
+            </a>
+            <ul class="dropdown-menu">
+              <li>
+                <a href="#">Action</a>
+              </li>
+              <li>
+                <a href="#">Another action</a>
+              </li>
+              <li>
+                <a href="#">Something else here</a>
               </li>
             </ul>
           </li>
@@ -79,16 +105,22 @@
     <!-- /.container-fluid -->
   </nav>
 
-  <section>
+
+  <div class="row">
+
+    
+  </div>
+
+  <!-- <section>
     <article>
           <button class="btn btn-primary" onclick="App.getAccounts()">Get Accounts</button>
           <h3>You have
             <span class="black">
-              <span id="balance"></span> META</span>
+              <span id="balance"></span> Tax Flow</span>
           </h3>
 
           <br>
-          <h1>Send MetaCoin</h1>
+          <h1>Send Payment</h1>
           <br>
           <label for="amount">Amount:</label>
           <input type="text" id="amount" placeholder="e.g., 95"></input>
@@ -107,7 +139,7 @@
           </span>
 
     </article>
-  </section>
+  </section> -->
 
   <section>
     <article>
